Remove meerkat. Fix logo on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,6 @@
   padding-bottom: 1em;
 }
 
-.logo-container .logo {
-    overflow: hidden;
-    border-radius: 50%;
-    border: 1px solid #333333;
-    width: 70px; 
-    float: left;
-}
-
 .logo-container .brand{
     font-size: 18px;
     line-height: 20px;
@@ -24,15 +16,11 @@
     width: 50px;
     height: 50px;
 }
+
 .navbar-transparent .logo-container .brand{
     color: #FFF;
 }
-.logo-container{
-//    margin-top: 10px;
-}
-.logo-container .logo img{
-    width: 100%;
-}
+
 .navbar-small .logo-container .brand{
     color: #333333;
 }
@@ -167,6 +155,14 @@
 }
 
 @media (min-width: 768px) {
+  .logo-container .logo {
+      overflow: hidden;
+      border-radius: 50%;
+      border: 1px solid #333333;
+      width: 70px; 
+      float: left;
+  }
+
   #splash {
     margin-top: 80px;
     margin-bottom: 20px;
@@ -175,6 +171,22 @@
 }
 
 @media (max-width: 768px) {
+  .logo-container .logo {
+      overflow: hidden;
+      border-radius: 50%;
+      border: 1px solid #333333;
+      height: 20px; 
+      width: 20px;
+      float: left;
+      margin-top: -5px;
+  }
+  
+  .logo-container .logo img{
+    margin-top: -6px;
+      width: 100%;
+  }
+  
+  
   #splash {
     margin-top: 80px;
     margin-bottom: 20px;
